# azcam-soguiders

./: README.md  config_server_soguiders.py  pyproject.toml  setup.py
azcam_soguiders/: __init__.py  config_server_soguiders.py  console.py  console_soguiders.py  detectors.py  parameters_soguiders.ini  server.py  server_soguiders.py  start_azcamserver_soguiders.py  system_config.py
azcam_soguiders/90primeguidercontrol/: 90PrimeGuiderControl.ini  GuiderControl.lvlps  GuiderControl.lvproj
azcam_soguiders/dspcode/dspcode/: gcam_ccd57 - Copy.s  gcam_ccd57.s  make_gcam_ccd57.bat
azcam_soguiders/dspcode/dspcode_90primeguider/: gcam_ccd57.ls
azcam_soguiders/dspcode/dspcode_bigguider/: gcam_ccid37.asm
azcam_soguiders/dspcode/dspcode_bokcassguider/: gcam_512ft.lod  gcam_512ft.ls
azcam_soguiders/dspcode/dspcode_guider512ft/: gcam_512ft.asm  gcam_512ft.lod
azcam_soguiders/dspcode/dspcode_maestroguider/: gcam_ccid-21.bat  gcam_ccid-21.lod  gcam_ccid-21.ls  gcam_ccid-21.s
azcam_soguiders/dspcode/dspcode_mmtguider/: gcam_ccid37.bat  gcam_ccid37.lod  gcam_ccid37.ls
azcam_soguiders/dspcode/dspcode_pepsiguider/: gcam_ccd57.ls
azcam_soguiders/dspcode/dspcode_spolguider/: gcam_ccd57 - Copy.asm  gcam_ccd57.asm  gcam_ccd57.s
azcam_soguiders/dspcode/dspcode_spolguider_bok/: Make gcam_ccd57.bat  gcam_ccd57.lod  gcam_ccd57.ls
azcam_soguiders/parameters/: parameters_azcamconsole_soguiders.ini  parameters_azcamserver_soguiders.ini
azcam_soguiders/soguider/: bin2gif  guider.hlp  guider.tcl  start_guider.py  variables copy with transformation.cfg
azcam_soguiders/telescopes/: telescope_big61.py  telescope_bok.py
azcam_soguiders/templates/: FitsTemplate_soguiders.txt
soguider/: guider.tcl  updates.hlp
support/: RemoveMemoryWin7.bat  StartGuider.py.lnk  install.py  parameters_soguiders_monitor.ini  start_console_soguiders.py  start_server_soguiders.py
support/IP_Info/: Set IP Address.py  bokpc3_IP.py  lesser_IP.py  mmtag_IP.py  mmtccd_IP.py  spolguiderbig61_IP.py  spolguiderbok_IP.py
support/dspcode/dspcode/: gcam_ccd57.asm  gcam_ccd57.lod  gcam_ccd57.ls  gcam_ccd57_ramp.s
(+19 files in other folders)
